# kobuki_pkg

./: CMakeLists.txt  README.md  package.xml
config/: velocity_controller.yaml
launch/: gazebo.launch  kobuki_gazebo.launch  rviz.launch
meshes/: Readme.md
rviz/: rviz_config.rviz
scripts/: class_communication.py  class_model_kobuki.py  communication_model.py  keybord_input.py  kobuki_controller.py  kobuki_model.py  model_robot_node.py
urdf/: kobuki_description.urdf.xacro  kobuki_parameters.urdf.xacro
